--- a/Exploratory Steps and PreProcessing.ipynb
+++ b/Exploratory Steps and PreProcessing.ipynb
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 664,
    "metadata": {
     "collapsed": false
    },
@@ -2595,6 +2595,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 699,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16,\n",
+       " 1,\n",
+       " 25,\n",
+       " 5,\n",
+       " 9,\n",
+       " 2,\n",
+       " 26,\n",
+       " 21,\n",
+       " 28,\n",
+       " 17,\n",
+       " 13,\n",
+       " 24,\n",
+       " 20,\n",
+       " 7,\n",
+       " 6,\n",
+       " 11,\n",
+       " 22,\n",
+       " 3,\n",
+       " 23,\n",
+       " 4,\n",
+       " 27,\n",
+       " 8,\n",
+       " 18,\n",
+       " 14,\n",
+       " 12,\n",
+       " 15,\n",
+       " 10,\n",
+       " 19]"
+      ]
+     },
+     "execution_count": 699,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#min(lda.alpha), max(lda.alpha), sorted(lda[tfidf_corp[110]], key=lambda x: x[1], reverse=True)\n",
+    "LDAvis_prepared.topic_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 692,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1613 28\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[16,\n",
+       " 1,\n",
+       " 25,\n",
+       " 5,\n",
+       " 9,\n",
+       " 2,\n",
+       " 26,\n",
+       " 21,\n",
+       " 28,\n",
+       " 17,\n",
+       " 13,\n",
+       " 24,\n",
+       " 20,\n",
+       " 7,\n",
+       " 6,\n",
+       " 11,\n",
+       " 22,\n",
+       " 3,\n",
+       " 23,\n",
+       " 4,\n",
+       " 27,\n",
+       " 8,\n",
+       " 18,\n",
+       " 14,\n",
+       " 12,\n",
+       " 15,\n",
+       " 10,\n",
+       " 19]"
+      ]
+     },
+     "execution_count": 692,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_list = []\n",
+    "for doc in tfidf_corp:\n",
+    "    for key, value in lda[doc]:\n",
+    "        if value > 0.2 :\n",
+    "            temp_list.append(key)\n",
+    "print(len(temp_list), len(set(temp_list)))\n",
+    "LDAvis_prepared.topic_order"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 251,
    "metadata": {
     "collapsed": false
@@ -3450,6 +3562,149 @@
    "source": [
     "#np.save('./corp_reducted.dmp', corp_reducted)\n",
     "#np.save('./corp_reducted_ex.dmp', corp_red_ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 700,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'file', 'text', 'stripped_txt', 'txt_3gram',\n",
+       "       'has_support_case', 'txt_length', 'no_images', 'no_links',\n",
+       "       'no_codeblock'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 700,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 704,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">txt_length</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">no_images</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">no_links</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">no_codeblock</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>has_support_case</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>439.821611</td>\n",
+       "      <td>496.143125</td>\n",
+       "      <td>3.258919</td>\n",
+       "      <td>6.450774</td>\n",
+       "      <td>6.661570</td>\n",
+       "      <td>8.344596</td>\n",
+       "      <td>3.439348</td>\n",
+       "      <td>6.406123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>773.056410</td>\n",
+       "      <td>804.806809</td>\n",
+       "      <td>4.497436</td>\n",
+       "      <td>6.220497</td>\n",
+       "      <td>11.010256</td>\n",
+       "      <td>13.344364</td>\n",
+       "      <td>8.671795</td>\n",
+       "      <td>20.137030</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  txt_length             no_images             no_links  \\\n",
+       "                        mean         std      mean       std       mean   \n",
+       "has_support_case                                                          \n",
+       "0                 439.821611  496.143125  3.258919  6.450774   6.661570   \n",
+       "1                 773.056410  804.806809  4.497436  6.220497  11.010256   \n",
+       "\n",
+       "                            no_codeblock             \n",
+       "                        std         mean        std  \n",
+       "has_support_case                                     \n",
+       "0                  8.344596     3.439348   6.406123  \n",
+       "1                 13.344364     8.671795  20.137030  "
+      ]
+     },
+     "execution_count": 704,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_df[['txt_length', 'no_images', 'no_links', 'no_codeblock', 'has_support_case']].groupby(by='has_support_case').agg(['mean', 'std']) #[['txt_length', 'no_images', 'no_links', 'no_codeblock', 'has_support_case']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 706,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.3971319 ,  0.48949762,  0.60429252],\n",
+       "       [ 0.3971319 ,  1.        ,  0.41309529,  0.14753935],\n",
+       "       [ 0.48949762,  0.41309529,  1.        ,  0.31245294],\n",
+       "       [ 0.60429252,  0.14753935,  0.31245294,  1.        ]])"
+      ]
+     },
+     "execution_count": 706,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(corpus_df[['txt_length', 'no_images', 'no_links', 'no_codeblock']].transpose())"
    ]
   },
   {
