--- a/Predictions.ipynb
+++ b/Predictions.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 338,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +128,7 @@
     "            train_collection = X_comb_ex\n",
     "            train_outcome = y_comb_ex\n",
     "        else:\n",
-    "            train_collection = X_comb\n",
+    "            train_collection = scaler.transform(X_comb)\n",
     "            train_outcome = y_comb\n",
     "    else:\n",
     "        train_collection = scaler.transform(tt_X[train_indx, :])\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 339,
    "metadata": {
     "collapsed": false
    },
@@ -491,10 +491,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.96, \n",
-      " Hyper params: {'gamma': 0.001, 'C': 10000.0} \n",
+      "Training score 0.98, \n",
+      " Hyper params: {'gamma': 0.001, 'C': 10.0} \n",
       "\n",
-      "Test score: AUC = 0.68  F1 = 0.46\n"
+      "Test score: AUC = 0.69  F1 = 0.51\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 341,
    "metadata": {
     "collapsed": false
    },
@@ -613,10 +613,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 1.00, \n",
-      " Hyper params: {'gamma': 1.0, 'C': 10.0} \n",
+      "Training score 0.98, \n",
+      " Hyper params: {'gamma': 0.001, 'C': 10.0} \n",
       "\n",
-      "Test score: AUC = 0.52  F1 = 0.10\n"
+      "Test score: AUC = 0.69  F1 = 0.51\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 340,
    "metadata": {
     "collapsed": false
    },
@@ -677,10 +677,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.71, \n",
-      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 10.0} \n",
+      "Training score 0.96, \n",
+      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 0.01} \n",
       "\n",
-      "Test score: AUC = 0.73  F1 = 0.47\n"
+      "Test score: AUC = 0.71  F1 = 0.50\n"
      ]
     }
    ],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 343,
    "metadata": {
     "collapsed": false
    },
@@ -699,23 +699,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.78, \n",
-      " Hyper params: {'gamma': 9.9999999999999995e-07, 'C': 10000.0} \n",
+      "Training score 0.96, \n",
+      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 10000000.0} \n",
       "\n",
-      "Test score: AUC = 0.50  F1 = 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+      "Test score: AUC = 0.71  F1 = 0.50\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(SVC(kernel='sigmoid'), \"roc_auc\", parameter_distrib, useEx=True)"
+    "find_best_classifier(SVC(kernel='sigmoid'), \"roc_auc\", parameter_distrib, useCombined=True)"
    ]
   },
   {
@@ -1899,12 +1891,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train AUC : 1.00 \n",
+      "Train F1: 1.00\n",
+      "Test AUC : 0.60 \n",
+      "Test F1: 0.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgbc.fit(train_X[train_indx, :], main_df.has_support_case.ravel()[train_indx])\n",
+    "prediction_xgbc = xgbc.predict(train_X[train_indx, :])\n",
+    "print(u\"Train AUC : {:.2f} \\nTrain F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[train_indx], prediction_xgbc),\n",
+    "                                                     f1_score(main_df.has_support_case.ravel()[train_indx], prediction_xgbc)))\n",
+    "prediction_xgbc = xgbc.predict(train_X[test_indx, :])#svc_class.predict(train_X_ex[test_indx, :])\n",
+    "\n",
+    "print(u\"Test AUC : {:.2f} \\nTest F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[test_indx], prediction_xgbc),\n",
+    "                                                   f1_score(main_df.has_support_case.ravel()[test_indx], prediction_xgbc)))"
+   ]
   }
  ],
  "metadata": {
