--- a/Predictions.ipynb
+++ b/Predictions.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Customer calls prediction"
+    "# Customer calls prediction\n",
+    "\n",
+    "\n",
+    "In this work we will check several methods. It is important to note:\n",
+    " - that we have reduced the number of features. \n",
+    " - we are dealing with imbalanced classes.\n",
+    "\n",
+    "Classification methods that we will consider:\n",
+    "  - Support Vector Machines\n",
+    "  - Multinomial Naive Bayes classifier\n",
+    "  - Random Forests\n",
+    "  - XGBoost"
    ]
   },
   {
@@ -40,6 +51,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above rows we loaded the required packages.\n",
+    "\n",
+    "Next step is loading the data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -62,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multinomial Naive Bayes classifier requires positive numbers as input data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -70,6 +97,13 @@
    "outputs": [],
    "source": [
     "words_pca_ex = np.load('./corp_reducted_ex.dmp.npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we build the input data:"
    ]
   },
   {
@@ -92,6 +126,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split data into train and test data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -111,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 350,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +172,7 @@
     "            train_collection = scaler.transform(X_comb)\n",
     "            train_outcome = y_comb\n",
     "    else:\n",
-    "        train_collection = scaler.transform(tt_X[train_indx, :])\n",
+    "        train_collection = tt_X[train_indx, :]\n",
     "        train_outcome = main_df.has_support_case.ravel()[train_indx]\n",
     "    rsearch.fit(train_collection, train_outcome)\n",
     "    print(u\"Training score {:.2f}, \\n Hyper params: {} \\n\".format( rsearch.best_score_, rsearch.best_params_) )\n",
@@ -146,45 +187,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SVM classifier"
+    "The method above is a utility function we use to find hyperparameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 290,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train AUC : 0.51 \n",
-      "Train F1: 0.03\n",
-      "Test AUC : 0.50 \n",
-      "Test F1: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "svc_class = SVC()\n",
-    "svc_class.fit(train_X[train_indx, :], main_df.has_support_case.ravel()[train_indx])\n",
-    "prediction_svc = svc_class.predict(train_X[train_indx, :])\n",
-    "print(u\"Train AUC : {:.2f} \\nTrain F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[train_indx], prediction_svc),\n",
-    "                                                     f1_score(main_df.has_support_case.ravel()[train_indx], prediction_svc)))\n",
-    "prediction_svc = svc_class.predict(train_X[test_indx, :])\n",
+    "## SVM classifier\n",
     "\n",
-    "print(u\"Test AUC : {:.2f} \\nTest F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[test_indx], prediction_svc),\n",
-    "                                                   f1_score(main_df.has_support_case.ravel()[test_indx], prediction_svc)))"
+    "We standardize the input data and calculate the train and test scores:"
    ]
   },
   {
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 347,
    "metadata": {
     "collapsed": false
    },
@@ -234,21 +246,14 @@
       "\n",
       "Test score: AUC = 0.50  F1 = 0.00\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
     }
    ],
    "source": [
     "parameter_distrib = {\"C\":np.logspace(-2, 10, num=5),\n",
     "                    \"gamma\": np.logspace(-9, 3, num=5)}\n",
-    "\n",
-    "find_best_classifier(SVC(), \"roc_auc\", parameter_distrib)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter('ignore')\n",
+    "    find_best_classifier(SVC(), \"roc_auc\", parameter_distrib)"
    ]
   },
   {
@@ -277,8 +282,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above paragraphs we have used area under curve to estimate the performance and tune the parameters.\n",
+    "\n",
+    "We can also tune parameters based on F1 score:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 348,
    "metadata": {
     "collapsed": false
    },
@@ -287,10 +301,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.45, \n",
-      " Hyper params: {'gamma': 9.9999999999999995e-07, 'C': 10000000.0} \n",
+      "Training score 0.29, \n",
+      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 10000000.0} \n",
       "\n",
-      "Test score: AUC = 0.71  F1 = 0.51\n"
+      "Test score: AUC = 0.50  F1 = 0.00\n"
      ]
     }
    ],
@@ -299,6 +313,13 @@
     "with warnings.catch_warnings():\n",
     "    warnings.simplefilter('ignore')\n",
     "    find_best_classifier(SVC(), 'f1', parameter_distrib)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuning parameters leads to overfitting no matter what score do we choose."
    ]
   },
   {
@@ -372,78 +393,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Training score 0.63, \n",
-      " Hyper params: {'alpha': 5.9183673469387754} \n",
+      " Hyper params: {'alpha': 5.5102040816326534} \n",
       "\n",
       "Test score: AUC = 0.60  F1 = 0.33\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(MultinomialNB(), \"roc_auc\", {\"alpha\":np.linspace(0, 10)}, useEx=True)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter('ignore')\n",
+    "    find_best_classifier(MultinomialNB(), \"roc_auc\", {\"alpha\":np.linspace(0, 10)}, useEx=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 352,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Training score 0.29, \n",
-      " Hyper params: {'alpha': 1.0204081632653061} \n",
+      " Hyper params: {'alpha': 1.2244897959183674} \n",
       "\n",
       "Test score: AUC = 0.60  F1 = 0.33\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(MultinomialNB(), \"f1\", {\"alpha\":np.linspace(0, 10)}, useEx=True)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter('ignore')\n",
+    "    find_best_classifier(MultinomialNB(), \"f1\", {\"alpha\":np.linspace(0, 10)}, useEx=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using SMOTE "
+    "Tuning parameters does help for the training set, but does not seem to have any effect on the test set.\n",
+    "\n",
+    "## Overcome imbalanced classes learning\n",
+    "\n",
+    "Using SMOTE we can generate more samples based on the present data. This will help us improve the scores. \n",
+    "\n",
+    "The idea is to add more synthetic samples in the training data set, train the model on this date and test on the respective test data set."
    ]
   },
   {
@@ -504,44 +511,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 353,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Training score 0.63, \n",
-      " Hyper params: {'alpha': 0.0} \n",
+      " Hyper params: {'alpha': 0.81632653061224492} \n",
       "\n",
-      "Test score: AUC = 0.50  F1 = 0.26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
+      "Test score: AUC = 0.64  F1 = 0.38\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(MultinomialNB(), \"roc_auc\", {\"alpha\":np.linspace(0, 10)}, useEx=True, useCombined=True)"
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter('ignore')\n",
+    "    find_best_classifier(MultinomialNB(), \"roc_auc\", {\"alpha\":np.linspace(0, 10)}, useEx=True, useCombined=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing with the previous model, this one has improved much more. The test score has improved for Multinomial Naive Bayes classifier."
    ]
   },
   {
@@ -603,6 +599,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do repeat the same excercise for SVM model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 341,
    "metadata": {
@@ -625,50 +628,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training score 0.61, \n",
-      " Hyper params: {'alpha': 0.0} \n",
-      "\n",
-      "Test score: AUC = 0.64  F1 = 0.38\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kliton/anaconda3/lib/python3.5/site-packages/sklearn/naive_bayes.py:472: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "find_best_classifier(MultinomialNB(), \"roc_auc\", {\"alpha\":np.linspace(0, 10)}, useEx=True, useCombined=True)"
+    "Not only the training score is much higher this time, but also the hyperparameters make more sense.\n",
+    "\n",
+    "Let's try with a linear kernel:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 358,
    "metadata": {
     "collapsed": false
    },
@@ -677,20 +647,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.96, \n",
-      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 0.01} \n",
+      "Training score 0.98, \n",
+      " Hyper params: {'coef0': 1, 'degree': 4, 'C': 10000.0} \n",
       "\n",
-      "Test score: AUC = 0.71  F1 = 0.50\n"
+      "Test score: AUC = 0.68  F1 = 0.45\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(SVC(kernel='linear'), \"roc_auc\", parameter_distrib, useCombined=True)"
+    "find_best_classifier(SVC(kernel='poly'), \"roc_auc\", \n",
+    "                     {'degree': range(2, 10, 1), \"C\":np.logspace(-2, 10, num=5), \"coef0\":[-5, -2 -1, 0, 1]}, \n",
+    "                     useCombined=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 357,
    "metadata": {
     "collapsed": false
    },
@@ -699,15 +671,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.96, \n",
-      " Hyper params: {'gamma': 1.0000000000000001e-09, 'C': 10000000.0} \n",
+      "Training score 0.98, \n",
+      " Hyper params: {'coef0': -1, 'C': 10.0} \n",
       "\n",
-      "Test score: AUC = 0.71  F1 = 0.50\n"
+      "Test score: AUC = 0.69  F1 = 0.48\n"
      ]
     }
    ],
    "source": [
-    "find_best_classifier(SVC(kernel='sigmoid'), \"roc_auc\", parameter_distrib, useCombined=True)"
+    "find_best_classifier(SVC(kernel='sigmoid'), \"roc_auc\", \n",
+    "                     {\"C\":np.logspace(-2, 10, num=5),  \"coef0\":[-10, -1, 0, 1, 10]}, \n",
+    "                     useCombined=True)"
    ]
   },
   {
@@ -938,27 +912,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-186-66e55aff7914>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-186-66e55aff7914>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    1:5 + [10]\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "#X_comb[:, range(0, 100)].shape\n",
-    "1:5 + [10]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1126,6 +1079,36 @@
     "print(u\"Train AUC : {:.2f} \\nTrain F1: {:.2f}\".format(roc_auc_score(y_comb, prediction_rf),\n",
     "                                                     f1_score(y_comb, prediction_rf)))\n",
     "prediction_rf = rf_class.predict(train_X[:,  [x for x in range(0, 100)] + [562, 563, 564]][test_indx])#svc_class.predict(train_X_ex[test_indx, :])\n",
+    "\n",
+    "print(u\"Test AUC : {:.2f} \\nTest F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[test_indx], prediction_rf),\n",
+    "                                                   f1_score(main_df.has_support_case.ravel()[test_indx], prediction_rf)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train AUC : 1.00 \n",
+      "Train F1: 1.00\n",
+      "Test AUC : 0.62 \n",
+      "Test F1: 0.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_class = RandomForestClassifier(n_estimators=1000)\n",
+    "rf_class.fit(X_comb, y_comb)\n",
+    "prediction_rf = rf_class.predict(X_comb)\n",
+    "print(u\"Train AUC : {:.2f} \\nTrain F1: {:.2f}\".format(roc_auc_score(y_comb, prediction_rf),\n",
+    "                                                     f1_score(y_comb, prediction_rf)))\n",
+    "prediction_rf = rf_class.predict(train_X[test_indx, :])#svc_class.predict(train_X_ex[test_indx, :])\n",
     "\n",
     "print(u\"Test AUC : {:.2f} \\nTest F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[test_indx], prediction_rf),\n",
     "                                                   f1_score(main_df.has_support_case.ravel()[test_indx], prediction_rf)))"
@@ -1916,6 +1899,17 @@
     "\n",
     "print(u\"Test AUC : {:.2f} \\nTest F1: {:.2f}\".format(roc_auc_score(main_df.has_support_case.ravel()[test_indx], prediction_xgbc),\n",
     "                                                   f1_score(main_df.has_support_case.ravel()[test_indx], prediction_xgbc)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "\n",
+    "- The best scores were achieved by SVM classifier\n",
+    "- We used XGBoost to validate the feature importance\n",
+    "- Important features are the number of code blocks in the documents and the length of a document. This points out to the complexity of a topic\n"
    ]
   }
  ],
