--- a/Predictions.ipynb
+++ b/Predictions.ipynb
@@ -1909,7 +1909,8 @@
     "\n",
     "- The best scores were achieved by SVM classifier\n",
     "- We used XGBoost to validate the feature importance\n",
-    "- Important features are the number of code blocks in the documents and the length of a document. This points out to the complexity of a topic\n"
+    "- Important features are the number of code blocks in the documents and the length of a document. This points out to the complexity of a topic\n",
+    "- Reducing the complexity of a document will reduce the number of support cases"
    ]
   }
  ],
